# Engineer-Workday-Assistant

./: .gitignore  README.md  requirements.txt
.github/workflows/: backend-ci.yml  ci.yml
backend/: .env.example  pyproject.toml
backend/app/: data.py  main.py  schemas.py
backend/app/routers/: assistant.py  chat.py  parts.py
backend/app/services/: assistant_agent.py  chatbot.py  explanations.py  filtering.py  schedule_seed.py  task_storage.py  vectorstore.py
backend/tests/: test_chromadb_storage.py  test_filtering.py  test_parts_api.py
data/: Partscleaned.csv
docs/: BLUEPRINT.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Home.tsx  PartSourcing.tsx  QuickChat.tsx  (+1 more)
scripts/: generate_synthetic_dataset.py
task 4 and 5/: main.ipynb
task-1_chatbot/backend/: chroma_db.py  pdf_retrieval.py  pdf_to_pinecone.py
task-1_chatbot/frontend/: app.py  tasks.py  test_tasks.py
task-1_chatbot/tests/: ai_explain_test.py  pinecone_connection_check_test.py  query_pinecone_test.py  test_run.py
task-2/: main.ipynb
task-3/: app.py  model_install.py  test.ipynb
task-3/notebooks/: data_exploration.ipynb  descriptive_analysis.ipynb
task-3/utils/: alternate_part.py  alternate_part_without_genai.py  chatbot.py  filtering_logic.py  find_alternative_parts_balanced.py  home.py  personal_assistant.py  task_storage.py  vectorstore.py
tests/: test_chromadb_storage.py  test_filtering.py
(+4 files in other folders)
