[project]
name = "alternative-part-finder-backend"
version = "0.1.0"
description = "FastAPI backend for the Alternative Part Finder: part matching, chatbot, and personal assistant"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "sentencepiece>=0.2.1",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
